--- a/src/app/components/snackbars/identifier-snackbar/identifier-snackbar.component.html
+++ b/src/app/components/snackbars/identifier-snackbar/identifier-snackbar.component.html
@@ -1,1 +1,1 @@
-<span matSnackBarLabel>Attention, cet identifiant est déjà utilisé dans ce Rôle</span>
+<span matSnackBarLabel>{{'snackbar_identifier' | translate}}</span>
