--- a/src/app/components/snackbars/loadingsucess-snackbar/loadingsucess-snackbar.component.html
+++ b/src/app/components/snackbars/loadingsucess-snackbar/loadingsucess-snackbar.component.html
@@ -1,1 +1,1 @@
-<span matSnackBarLabel>Chargement du fichier réussi</span>
+<span matSnackBarLabel>{{'snackbar_loading_success' | translate}}</span>
