--- a/src/app/pieces/rules/rules.component.html
+++ b/src/app/pieces/rules/rules.component.html
@@ -3,29 +3,29 @@
 
     <div class="piece-menu" [class]="displayMenu">
         <mat-icon fontIcon="backspace" (click)="onClickErase()"
-        matTooltip="Effacer le contenu de cette tuile."
+        [matTooltip]="translate.instant('clearPiece_tooltip')"
         matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>
     </div>
 
     <div class="piece-form">
         <div class="piece-form-rules">
-            <div class="piece-form-title">Règles du jeu</div>  
+            <div class="piece-form-title">{{'rules_title' | translate}}</div>  
             <textarea [(ngModel)]="scenario.gameRules" (change)="editTrace($event,'rules')"
-            matTooltip="Éléments importants à prendre en compte dans les règles du jeu"
+            [matTooltip]="translate.instant('rules_rule_tooltip')"
             matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></textarea>
         </div>
         <div class="piece-form-ressources">
-            <div class="piece-form-title">Ressources / objets</div>
+            <div class="piece-form-title">{{'rules_ressource_title' | translate}}</div>
             <div class="piece-form-ressources-object">
                 <div class="piece-form-ressources-object-infos" *ngFor="let ressource of scenario.ressources; let i = index"
-                matTooltip="Objets, ressources disponibles pour TOUS les rôles"
+                [matTooltip]="translate.instant('rules_ressource_tooltip')"
                 matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips">
                     <div class="piece-form-ressources-object-infos-name">
-                        <label for="name">Nom</label>
+                        <label for="name">{{'rules_ressource_name_label' | translate}}</label>
                         <input name="name" type="text" [(ngModel)]="ressource.name" (change)="editTrace($event,'Ressource_['+i+']_name')"/>
                     </div>
                     <div class="piece-form-ressources-object-infos-quantity">
-                        <label for="quantity">Quantité</label>
+                        <label for="quantity">{{'rules_ressource_quantity_label' | translate}}</label>
                         <input name="quantity" type="number" min="1"[(ngModel)]="ressource.number" (change)="editTrace($event,'Ressource_['+i+']_quantity')"/>
                     </div>
                     <button mat-button (click)="removeRessource(i)"><mat-icon fontIcon="remove"></mat-icon></button>                           
