--- a/src/app/components/dialogs/suppress-dialog/suppress-dialog.component.html
+++ b/src/app/components/dialogs/suppress-dialog/suppress-dialog.component.html
@@ -1,6 +1,6 @@
-<h2 mat-dialog-title>Supprimer l'élément</h2>
-<mat-dialog-content>Êtes vous sûr de vouloir supprimer {{data}} et tout ce que cela implique ?</mat-dialog-content>
+<h2 mat-dialog-title>{{'dialog_delete_title' | translate}}</h2>
+<mat-dialog-content>{{'dialog_delete_content1' | translate}} {{data}} {{'dialog_delete_content2' | translate}}</mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Non</button>
-    <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Oui</button>
+    <button mat-button mat-dialog-close>{{'dialog_button_no' | translate}}</button>
+    <button mat-button [mat-dialog-close]="true" cdkFocusInitial>{{'dialog_button_yes' | translate}}</button>
 </mat-dialog-actions>
