--- a/src/app/pieces/educational-objective/educational-objective.component.html
+++ b/src/app/pieces/educational-objective/educational-objective.component.html
@@ -1,6 +1,6 @@
 <div class="piece" (mouseover)="displayMenu='show'" (mouseleave)="displayMenu='hide'" (click)="onClickPiece()"
 [class]="pieceDetailsService.piece == scenario.missions[i] ? 'isActive' : 'border'"
-matTooltip="La mission est commune à tous les Rôles"
+[matTooltip]="translate.instant('mission_tooltip')"
 matTooltipPosition="before" [matTooltipDisabled]="!tooltipService.activatedTooltips">
     <div class="piece-attach piece-attach-right"></div>
     <div class="piece-attach piece-attach-left-top"></div>
@@ -8,23 +8,23 @@ matTooltipPosition="before" [matTooltipDisabled]="!tooltipService.activatedToolt
     
     <div class="piece-menu" [class]="displayMenu">
         <mat-icon fontIcon="add" (click)="onClickAdd()"
-        matTooltip="Ajouter une mission."
+        [matTooltip]="translate.instant('mission_add_tooltip')"
         matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>
         <mat-icon fontIcon="backspace" (click)="onClickErase()"
-        matTooltip="Effacer le contenu de cette tuile."
+        [matTooltip]="translate.instant('clearPiece_tooltip')"
         matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>
         <mat-icon fontIcon="delete" (click)="onClickDelete()" *ngIf="canDelete()"
-        matTooltip="Supprimer la mission."
+        [matTooltip]="translate.instant('mission_delete_tooltip')"
         matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>
     </div>
    
     <div class="piece-form">
-        <div class="piece-form-title">Objectif(s) pédagogique</div>
+        <div class="piece-form-title">{{'missionEducationnalObjective_title' | translate}}</div>
         <mat-icon class="piece-form-comment" fontIcon="comment" *ngIf="scenario.missions[i].comments.length > 0"></mat-icon>
         <div class="piece-form-objective">
-            <label for="objective">Commun pour la mission {{i+1}}</label>
-            <textarea name="objective" [(ngModel)]="educationnalObjective.objective" (change)="editTrace($event, 'Obj_m')" placeholder="Comprendre les rôles impliqués dans la conception d'un site web"
-            matTooltip="Ce que l’on veut atteindre en situation de formation. Commencer chaque objectif par un verbe. Si votre jeu est composé de plusieurs missions, distinguez les objectifs globaux du jeu et les objectifs de chaque mission"
+            <label for="objective">{{'missionEducationnalObjective_objective_label' | translate}} {{i+1}}</label>
+            <textarea name="objective" [(ngModel)]="educationnalObjective.objective" (change)="editTrace($event, 'Obj_m')" [placeholder]="translate.instant('missionEducationnalObjective_objective_placeholder')"
+            [matTooltip]="translate.instant('missionEducationnalObjective_objective_tooltip')"
             matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></textarea>
         </div>
             
