--- a/src/app/sider-pieces/supplementary-task/supplementary-task.component.html
+++ b/src/app/sider-pieces/supplementary-task/supplementary-task.component.html
@@ -1,10 +1,10 @@
 <div class="piece" [style.background]="task.supplementaryRole ?
     'linear-gradient(165deg, rgba(154,213,236,1) 0%, rgba(154,213,236,1) 55%,'+task.supplementaryRole.color+' 55%,'+task.supplementaryRole.color+' 100%)'
     : 'linear-gradient(165deg, rgba(154,213,236,1) 0%, rgba(154,213,236,1) 55%, rgba(0,0,0,1) 55%, rgba(0,0,0,1) 100%)'"
-    matTooltip="Sert à associer ou non une tâche à un Rôle supplémentaire"
+    [matTooltip]="translate.instant('supplementaryRole_tooltip')"
     matTooltipPosition="before" [matTooltipDisabled]="!tooltipService.activatedTooltips">
     <div class="piece-form">
-        <div class="piece-title">Tâche liée au rôle supplémentaire</div>
+        <div class="piece-title">{{'supplementaryRole_title' | translate}}</div>
         <!--
         <div class="piece-form-checkbox">
             <input type="checkbox" [(ngModel)]="checkbox"/>
@@ -12,9 +12,9 @@
         </div>
         œ-->
         <div class="piece-form-select">
-            <label>Rôle</label>
+            <label>{{'supplementaryRole_label' | translate}}</label>
             <select [(ngModel)]="task.supplementaryRole" (change)="editTrace($event,'supplementaryRole')">
-                <option selected [ngValue]="undefined">Aucun</option>
+                <option selected [ngValue]="undefined">{{'supplementaryRole_none' | translate}}</option>
                 <ng-container *ngFor="let supplementaryRole of role.supplementaryRoles">
                     <option [ngValue]="supplementaryRole">{{supplementaryRole.name}}</option>
                 </ng-container>
